<resources>
    <string name="app_name">Garçon</string>
    <string name="create_grocery_list">Create List</string>
    <string name="my_ideas">Grocery List</string>
    <string name="create_grocery_hint">Start searching for groceries here</string>
    <string name="create_grocery_snackbar_hint">Looks like your grocery list is empty, start adding groceries to the list by tapping on the
        search icon above.
    </string>
    <string name="search_with_empty_cart_hint">Your shopping cart is empty. You may perform a recipe search using the ingredients in the list.</string>
    <string name="my_ideas_hint">My Shopping Cart</string>

    <string name="google_maps_api_key">AIzaSyDwoiscaWKrSbPgIM_cUlL0CJNFFY_IKOg</string>

    <string name="api_endpoint_recipe" translatable="false">
        https://spoonacular-recipe-food-nutrition-v1.p.mashape.com/
    </string>
    <string name="idea_search_hint">Search ingredient ...</string>
    <string name="goal_search_hint">Search recipe ...</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome">Welcome, %1s</string>
    <string name="facebook_application_id" translatable="false">392989124371977</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb392989124371977</string>
    <string name="custom_list">Custom list</string>
    <string name="saved_goals">Recent</string>
    <string name="saved_goals_hint">Recently viewed recipes</string>
    <string name="explore_goals">Explore</string>
    <string name="owner">Owner: %1s</string>
    <string name="add_friends">Add New Friend</string>
    <string name="add_friend">Add Friend</string>
    <string name="share_list">Share List</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="remove_recipe">Remove Recipe</string>
    <string name="create_list">Add to cart</string>
    <string name="search_goal">Search Recipe</string>
    <string name="nearby_stores">Nearby Stores</string>
    <string name="empty_cart">Empty Cart</string>
    <string name="default_idea_prefix">Groceries List</string>
    <string name="initials">Initials of user</string>
    <string name="cannot_remove_self">Cannot remove yourself.</string>
    <string name="crossout">Crossout</string>
    <string name="uncrossout">Un-crossout</string>
    <string name="remove">Remove</string>
    <string name="notification_title">A new list shared.</string>
    <string name="notification_text">Curious what to get ? - click here !</string>
    <string name="save_empty_list">Do you want to save an empty list ?</string>
    <string name="empty_list">Empty List</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="navigate">Navigate</string>
    <string name="dismiss">dismiss</string>
    <string name="subtitle_text">ready in %d minutes</string>

    <string name="transition_goal_image" translatable="false">goalImage</string>
    <string name="transition_goal_title" translatable="false">goalTitle</string>
    <string name="transition_goal_index" translatable="false">goalIndex</string>

    <string name="share_url_host" translatable="false">garçondecuisine.com</string>
</resources>
