<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="5"
        android:title="@string/idea_search_hint"
        app:actionViewClass="com.pinyaoting.garcon.view.AutoCompleteSearchView"
        app:showAsAction="ifRoom|collapseActionView"/>
    <item
        android:id="@+id/action_remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="5"
        android:title="@string/empty_cart"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
</menu>