<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.pinyaoting.garcondecuisine.interfaces.presentation.GoalDetailActionHandlerInterface"/>

        <variable
            name="pos"
            type="int"/>

        <variable
            name="viewState"
            type="com.pinyaoting.garcondecuisine.viewstates.Goal"/>
    </data>

    <FrameLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/colorBackground"
                 tools:context="com.pinyaoting.garcondecuisine.fragments.GoalPreviewFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.percent.PercentFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/big_top_image_height">

                    <ImageView
                        android:id="@+id/ivIdeaBackgroundImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transition_goal_image"
                        tools:src="@drawable/background_0"/>

                    <ImageView
                        android:id="@+id/ivGoalSearchBackground"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:scaleType="fitXY"
                        android:src="@drawable/rectangular_triangle"
                        android:tint="@color/colorBackground"
                        app:layout_heightPercent="@fraction/top_image_cut_ratio"/>

                    <TextView
                        android:id="@+id/tvGoalPreviewIndex"
                        android:layout_width="@dimen/activity_list_composition_idea_icon_width"
                        android:layout_height="@dimen/activity_list_composition_idea_icon_height"
                        android:layout_gravity="bottom|start|left"
                        android:layout_marginLeft="@dimen/goal_preview_btn_margin_start"
                        android:layout_marginStart="@dimen/goal_preview_btn_margin_start"
                        android:background="@drawable/ic_brightness_1"
                        tools:backgroundTint="@color/colorUp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text='@{Integer.toString(pos+1)}'
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorButton"
                        android:transitionName="@string/transition_goal_index"
                        tools:text="1"/>

                </android.support.percent.PercentFrameLayout>

                <TextView
                    android:id="@+id/tvGoalPreviewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/goal_preview_line_margin"
                    android:layout_marginLeft="@dimen/goal_preview_title_margin"
                    android:layout_marginStart="@dimen/goal_preview_title_margin"
                    android:layout_marginRight="@dimen/goal_preview_title_margin"
                    android:layout_marginEnd="@dimen/goal_preview_title_margin"
                    android:text='@{viewState.title}'
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    tools:textColor="@color/colorUp"
                    android:transitionName="@string/transition_goal_title"
                    tools:text="Grilled Deviled Chickens"/>

                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/goal_preview_line_margin"
                        android:layout_marginLeft="@dimen/goal_preview_title_margin"
                        android:layout_marginStart="@dimen/goal_preview_title_margin"
                        android:layout_marginRight="@dimen/goal_preview_title_margin"
                        android:layout_marginEnd="@dimen/goal_preview_title_margin"
                        android:layout_marginBottom="@dimen/goal_preview_line_margin"
                        >

                    <ImageView
                            android:id="@+id/ivGoalPreviewSubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/goal_preview_subtitle_icon_height"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:paddingRight="@dimen/goal_preview_icon_padding"
                            android:paddingEnd="@dimen/goal_preview_icon_padding"
                            android:alpha="0.5"
                            tools:tint="@color/colorUp"
                            android:src="@drawable/ic_schedule"/>

                    <TextView
                            android:id="@+id/tvGoalPreviewSubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:gravity="center_vertical"
                            android:maxLines="1"
                            android:text='@{viewState.subTitle}'
                            tools:textColor="@color/colorUpOverlay"
                            tools:text="ready in 16 minutes"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/goal_preview_text_margin"
                    android:ellipsize="end"
                    android:text='@{viewState.description}'
                    android:textColor="@color/colorText"
                    tools:text="4 baby chickens (poussins) or cornish hens (about 1 1/4 pounds each), or 4 chicken breast halves
3 lemons, plus wedges for garnish
4 cloves garlic, peeled and smashed
1 tablespoon crushed red-pepper flakes, or to taste
1 tablespoon finely chopped fresh thyme
1 tablespoon finely chopped fresh rosemary
1/2 cup olive oil
Salt, to taste"/>

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/nsvGoalPreviewIdeasContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvGoalPreviewIdeas"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </android.support.v4.widget.NestedScrollView>
            </LinearLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right|end"
            android:layout_margin="16dp"
            android:onClick="@{() -> handler.onCreateIdeaListClick(pos)}"
            android:src="@drawable/ic_add_shopping_cart"
            android:tint="@color/colorButton"
            app:fab_colorNormal="@color/colorDownOverlayDark"
            app:fab_title="@string/create_list"/>

    </FrameLayout>
</layout>